--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -53,11 +53,18 @@
     <sys:String x:Key="LOCSucessStoryIntegrationButtonDetails">Добавить кнопку с деталями</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationButtonHeader">Добавить значек в окне</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Отображать прогрес:</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">Индикатором</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">В процентах</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowGraphicTitle">With title</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowIndicator">Индикатором</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">В процентах</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactUnlocked">Show compact unlocked list</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactLocked">Show compact locked list</sys:String>
+
+    <sys:String x:Key="LOCSucessStoryIntegrationOptions">Selection elements</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptions">Graphic options</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Show absciss label</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarOptions">Progress bar options</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowIndicator">Индикатором</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">В процентах</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationListOptions">List achievements options</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">База достижений была обновлена.</sys:String>
 
