--- a/Localization/pl_PL.xaml
+++ b/Localization/pl_PL.xaml
@@ -59,6 +59,7 @@
     <sys:String x:Key="LOCSucessStoryIntegrationOptions">Selection elements</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptions">Graphic options</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Show absciss label</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabelsOrdinates">Show ordinates label</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarOptions">Progress bar options</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowIndicator">Ze wskaźnikiem</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">Z procentem</sys:String>
