--- a/Localization/zh_CN.xaml
+++ b/Localization/zh_CN.xaml
@@ -58,7 +58,8 @@
 
     <sys:String x:Key="LOCSucessStoryIntegrationOptions">Selection elements</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptions">Graphic options</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Show absciss label</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptionsCountAbscissa">Number of data in abscissa</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Show abscissa label</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabelsOrdinates">Show ordinates label</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarOptions">Progress bar options</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowIndicator">附加数量r</sys:String>
