--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -17,6 +17,7 @@
     <sys:String x:Key="LOCSucessStoryEnableSteam">Enable Steam</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableGog">Enable GOG</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Enable Origin</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableXbox">Enable Xbox</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableRetroAchievements">Enable RetroAchievements</sys:String>
 
     <sys:String x:Key="LOCSucessStoryEnableRetroAchievementsView">Enable seprate view for RetroAchievements</sys:String>
