--- a/Localization/pl_PL.xaml
+++ b/Localization/pl_PL.xaml
@@ -17,6 +17,7 @@
     <sys:String x:Key="LOCSucessStoryEnableSteam">Uaktywnij Steam</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableGog">Uaktywnij GOG</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Uaktywnij Origin</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableXbox">Uaktywnij Xbox</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableRetroAchievements">Uaktywnij RetroAchievements</sys:String>
 
     <sys:String x:Key="LOCSucessStoryEnableRetroAchievementsView">Enable seprate view for RetroAchievements</sys:String>
