--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -8,6 +8,8 @@
     <sys:String x:Key="LOCSucessStory">SuccessStory</sys:String>
     <sys:String x:Key="LOCSucessStoryAchievements">Succès</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryNotificationsSteamPrivate">Profil Steam n'est pas public</sys:String>
+
     <!--  
     SuccessStorySettingsView
     -->
