--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -7,6 +7,8 @@
     -->
     <sys:String x:Key="LOCSucessStory">SuccessStory</sys:String>
     <sys:String x:Key="LOCSucessStoryAchievements">Achievements</sys:String>
+    
+    <sys:String x:Key="LOCSucessStoryNotificationsSteamPrivate">Steam profil is not public</sys:String>
 
     <!--  
     SuccessStorySettingsView
