--- a/Localization/zh_CN.xaml
+++ b/Localization/zh_CN.xaml
@@ -8,6 +8,8 @@
     <sys:String x:Key="LOCSucessStory">功成名就Success Story</sys:String>
     <sys:String x:Key="LOCSucessStoryAchievements">成就</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryNotificationsSteamPrivate">Steam profil is not public</sys:String>
+
     <!--  
     SuccessStorySettingsView
     -->
